# customer-support-backend

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/core/: config.py
app/models/: message.py  ticket.py  user.py
